# tomata

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs  settings.rs  sound.rs  state.rs  tomata.rs  widget.rs
