[package]
name = "tomata"
version = "0.1.0"
authors = ["wednesday <jeniopy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.6"
serde = { version = "1.0", features = ["derive", "std", "rc"] }
serde_json = "1.0"
notify-rust = "4"
