[package]
name = "tomata"
version = "0.1.0"
authors = ["Krzysztof Hrynczenko <jeniopy@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/khrynczenko/tomata"
repository = "https://github.com/khrynczenko/tomata"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.6"
serde = { version = "1.0", features = ["derive", "std", "rc"] }
serde_json = "1.0"
notify-rust = "4"
cpal = "0.12"
once_cell = "1.4"
