[package]
name = "tomata"
version = "0.1.0"
authors = ["Krzysztof Hrynczenko <jeniopy@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/khrynczenko/tomata"
repository = "https://github.com/khrynczenko/tomata"
readme = "README.md"

[profile.release]
lto = true

[dependencies]
cpal = "0.12"
druid = "0.6"
notify-rust = "4"
once_cell = "1.4"
serde = { version = "1.0", features = ["derive", "std", "rc"] }
serde_json = "1.0"
